--- a/assignment.css
+++ b/assignment.css
@@ -84,8 +84,14 @@ h4{
     text-align: center;
 }
 a:link{
-	color:#666;
+    color: #666;
 }
 a:visited{
 	color:#666;
+}
+a:hover{
+	color:#993366;
+}
+a:active{
+	color:#666666;
 }
